--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,7 @@ r.DefaultFeature.AutoExposure=False
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Main.Main
 GameDefaultMap=/Game/Maps/Main.Main
+GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_ToonTanksGameMode.BP_ToonTanksGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -57,5 +58,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
